# my-fastapi-app

./: .gitignore  akio0329  akio0329.pub  pyproject.toml
src/my_fastapi_app/: main.py
