[project]
name = "my-fastapi-app"
version = "0.1.0"
description = ""
authors = [
    {name = "akiokinawan",email = "yomitan15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "my_fastapi_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
